--- a/pom.xml
+++ b/pom.xml
@@ -32,12 +32,12 @@
       <url>http://localhost:8081/artifactory/libs-snapshot-local</url>
     </snapshotRepository>
   </distributionManagement>
-  
+
   <scm>
     <connection>scm:git:git@github.com:loguerto/devops.git</connection>
     <developerConnection>scm:git:git@github.com:loguerto/devops.git</developerConnection>
     <url>git:git@github.com:loguerto/devops.git</url>
-    <tag>HEAD</tag>  
+    <tag>HEAD</tag>
   </scm>
 
   <dependencies>
@@ -59,17 +59,16 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
-      <exclusions>
-        <exclusion>
-          <groupId>org.junit.vintage</groupId>
-          <artifactId>junit-vintage-engine</artifactId>
-        </exclusion>
-      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-devtools</artifactId>
       <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>     <!-- NOT org.junit here -->
+      <artifactId>junit-dep</artifactId>
+      <version>4.11</version>
     </dependency>
   </dependencies>
 
@@ -87,7 +86,7 @@
           <tagNameFormat>v@{project.version}</tagNameFormat>
           <autoVersionSubmodules>true</autoVersionSubmodules>
         </configuration>
-      </plugin>      
+      </plugin>
     </plugins>
   </build>
 
